<resources>
    <string name="app_name">TestDemo</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="server_error">Server Error</string>
    <string name="login_screen">Login Screen</string>
    <string name="button">Button</string>
    <string name="user_name">User name</string>
    <string name="home_screen">Home Screen</string>
    <string name="username_empty_error">Please enter user name</string>
    <string name="password_empty_error">Please enter password</string>
    <string name="internet_error">It seems your internet connection is not working, please try again.</string>
    <string name="password">Password</string>
</resources>